[tool.poetry]
name = "optimizare-norofert"
version = "0.1.0"
description = "Demo pentru Norofert."
authors = ["Lucian Ursu <lucian.ursu@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
scipy = "^1.15.2"
streamlit = "^1.44.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
