[tool.poetry]
name = "optimizare-productsie"
version = "0.1.0"
description = "Demo care folosește programare liniară pentru alocarea optimă a resurselor."
authors = ["Lucian Ursu <lucian.ursu@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
scipy = "^1.15.2"
streamlit = "^1.44.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
